--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,4 +8,6 @@ pydantic-settings==2.1.0
 python-dotenv==1.0.0
 sqlalchemy==2.0.23
 alembic==1.12.1
-psycopg2-binary==2.9.9 
+psycopg2-binary==2.9.9
+email-validator==2.1.0.post1
+python-dateutil==2.8.2 
